# por-se

./: .clang-format  .editorconfig  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  allocate.cpp  pseudoalloc.h  randomtest.cpp  sample.cpp  stacktest.cpp  xoshiro.h
cmake/: find_llvm.cmake
cmake/modules/: FindCryptoPP.cmake  FindPseudoAlloc.cmake  FindZ3.cmake
include/klee/: Constraints.h  ExecutionState.h  Interpreter.h  OptionCategories.h  PorCmdLine.h  StatePruningCmdLine.h  Thread.h  ThreadId.h  klee.h
include/klee/Config/: config.h.cmin
include/klee/Expr/: ArrayCache.h  ArrayExprHash.h  Expr.h  ExprHashMap.h  ExprPPrinter.h
include/klee/Fingerprint/: MemoryFingerprint.h  MemoryFingerprintDelta.h  MemoryFingerprintValue.h
include/klee/por/: events.h
include/klee/runtime/: klee_types.h  limits.h  pthread.h  semaphore.h
include/klee/util/: ExprHashMap.h  ExprPPrinter.h  Ref.h
include/por/: cone.h  configuration.h  csd.h  node.h  unfolding.h
include/por/event/: base.h  broadcast.h  condition_variable_create.h  condition_variable_destroy.h  iterator.h  kind.h  local.h  lock_acquire.h  lock_create.h  lock_destroy.h  lock_release.h  metadata.h  signal.h  thread_create.h  thread_exit.h  thread_init.h  thread_join.h  wait1.h  wait2.h
include/pseudoalloc/: pseudoalloc.h
include/util/: at_scope_exit.h  create_uninitialized.h  sso_array.h
lib/: CMakeLists.txt
lib/Basic/: CmdLineOptions.cpp
lib/Core/: AddressSpace.cpp  AddressSpace.h  CMakeLists.txt  CoreStats.cpp  CoreStats.h  ExecutionState.cpp  Executor.cpp  Executor.h  ExecutorTimers.cpp  ExecutorUtil.cpp  GlobalObjectsMap.cpp  GlobalObjectsMap.h  InfiniteLoopDetectionFlags.cpp  InfiniteLoopDetectionFlags.h  Memory.cpp  Memory.h  MemoryAccessTracker.cpp  MemoryAccessTracker.h  MemoryFingerprint.cpp  MemoryFingerprint.h  MemoryFingerprintDelta.h  MemoryFingerprint_Base.h  MemoryFingerprint_CryptoPP_BLAKE2b.cpp  MemoryFingerprint_CryptoPP_BLAKE2b.h  MemoryFingerprint_StringSet.cpp  MemoryFingerprint_StringSet.h  MemoryFingerprint_Verified.h  MemoryManager.cpp  MemoryManager.h  MemoryState.cpp  MemoryState.h  MemoryTrace.cpp  MemoryTrace.h  PTree.cpp  PTree.h  PartialOrderExplorer.cpp  PartialOrderExplorer.h  PartialOrderGraph.cpp  PartialOrderGraph.h  ScheduleTree.cpp  (+10 more)
lib/Core/RaceDetection/: CommonTypes.h  DataRaceDetection.cpp  DataRaceDetection.h  EpochMemoryAccesses.cpp  EpochMemoryAccesses.h  ObjectAccesses.cpp  ObjectAccesses.h  StateBoundTimingSolver.h  TimingSolverWrapper.h
lib/Core/por/: DelayedFreesContainer.cpp  DelayedFreesContainer.h  PorEventManager.cpp  PorEventManager.h
lib/Expr/: ArrayCache.cpp  Expr.cpp  ExprPPrinter.cpp  ExprVisitor.cpp
lib/Fingerprint/: CMakeLists.txt  MemoryFingerprint_CryptoPP_BLAKE2b.cpp  MemoryFingerprint_StringSet.cpp
lib/Module/: CMakeLists.txt  KModule.cpp  LiveRegister.cpp  Passes.h
lib/Por/: CMakeLists.txt  comb.cpp  cone.cpp  configuration.cpp  csd.cpp  csd2.cpp  erv.cpp  event.cpp  node.cpp  unfolding.cpp
lib/Support/: CMakeLists.txt  CallPrinter.cpp  DebugPrinter.cpp  PrintVersion.cpp
lib/por/: CMakeLists.txt  comb.cpp  cone.cpp  configuration.cpp  csd.cpp  erv.cpp  node.cpp  unfolding.cpp
lib/por/event/: base.cpp
lib/por/include/: CMakeLists.txt
lib/por/include/por/: CMakeLists.txt  comb.h  cone.h  configuration.h  csd.h  node.h  program.h  thread_id.h  unfolding.h  version.h.in
lib/por/include/por/event/: base.h  broadcast.h  condition_variable_create.h  condition_variable_destroy.h  event.h  local.h  lock_acquire.h  lock_create.h  lock_destroy.h  lock_release.h  program_init.h  program_start.h  signal.h  thread_create.h  thread_exit.h  thread_init.h  thread_join.h  thread_start.h  thread_stop.h  wait1.h  wait2.h
pesunfolding/: .gitignore
pesunfolding/lib/: CMakeLists.txt
pseudoalloc/: .editorconfig  .gitlab-ci.yml  CMakeLists.txt
pseudoalloc/lib/: CMakeLists.txt
pseudoalloc/tests/: CMakeLists.txt
pseudoalloc/tests/src/: randomtest.cpp  stacktest.cpp
runtime/: CMakeLists.txt  Makefile.cmake.bitcode  Makefile.cmake.bitcode.config.in  Makefile.cmake.bitcode.rules
runtime/POSIX/: fd-poll.c  fd-poll.h  fd.c  fd.h  fd_32.c  fd_64.c  fd_init.c  klee_init_env.c  runtime-lock.c  runtime-lock.h  stubs.c
runtime/pthread/: Makefile.cmake.bitcode  attributes.h  attributes_barrier.c  attributes_cond.c  attributes_mutex.c  attributes_rwlock.c  attributes_thread.c  barrier.c  cond.c  key.c  key.h  mutex.c  pthread.c  pthread_impl.h  rwlock.c  semaphore.c  spin.c  thread.c  utils.c  utils.h
test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
test/ArrayOpt/: test_mixed_hole.c
test/DeterministicAllocations/: allocations-page-aligned.c  delayed-frees.c  in-requested-mapping.c  invalid-mapping-files.c  malloc-free-malloc.c  placement-redzones.c  thread-mappings-invalid-address.conf  thread-mappings-invalid-overlapping.conf  thread-mappings-invalid-syntax.conf  thread-mappings-invalid-tid.conf  thread-mappings.conf
test/Expr/: ReadExprConsistency.c  print-smt-let.smt2.good  print-smt-named.smt2.good  print-smt-none.smt2.good
test/Feature/: Atomics.ll  BitcastAlias.ll  DeterministicSwitch.c  FunctionAliasExit.c  KleeStats.c  LinkLLVMLib.c  LowerSwitch.c  MemoryLimit.c  MultiMkSym.c  Realloc.c  RewriteEqualities.c  SilentKleeAssume.c  Vararg.c  WriteCov.c  srem.c
test/Solver/: Z3ConstantArray.c
test/regression/: 2014-07-04-unflushed-error-report.c  2014-09-13-debug-info.c  2020-03-25-dead-atomic-load.ll  2020-03-25-live-sets.ll
tests/: CMakeLists.txt
tests/src/: csd.cpp  randomtest.cpp  stacktest.cpp  thread_id.cpp  unfolding.cpp
tools/klee/: main.cpp
tools/klee-replay/: klee-replay.c  klee_init_env.c
tools/random-graph/: CMakeLists.txt  main.cpp
unittests/: CMakeLists.txt  lit-unit-tests-common.site.cfg.in
unittests/Module/: ModuleTest.cpp
unittests/Por/: .editorconfig  CMakeLists.txt  csd.cpp  event.cpp  thread_id.cpp  unfolding.cpp
unittests/pseudoalloc/: .clang-format  CMakeLists.txt  allocate.cpp  randomtest.cpp  reuse.cpp  sample.cpp  stacktest.cpp
utils/sanitizers/: lsan.txt  ubsan.txt
(+240 files in other folders)
